# DTU-02613-TimeSeries

./: .gitignore  pyproject.toml
Assignment1/Jeppe/: notes_Yunis.md
Assignment1/Yunis/Assignment1/: assignment1.ipynb
Assignment1/report/: README.md  report.typ
Assignment1/report/output/: wls_rls_params.csv
Assignment2/: jeppe.ipynb  report.bib  report.typ  utils.typ
Assignment3/: report.bib  report.typ
Assignment3/Jeppe/: JK_1.ipynb  JK_2.ipynb  JK_3.ipynb
Assignment3/Yunis/: assignment3.ipynb  backup_3_4.typ  backup_3_5_model_selection.typ  notes.md  report_backup.typ
Assignment3/output/: 2_2.csv
Assignment4/: JK_1.ipynb  part1.ipynb  part2.ipynb  report.typ
Assignment4/Yunis/: part2.ipynb
Assignment4/cache/: 1_5_experiment.pkl
Assignment4/project/: ssm.py  utils.py
Assignment4/report/: report.bib  report.typ
Jeppe/: explore_data.ipynb  notes_Yunis.md  report.typ
Jeppe/output/: forecast.csv
Yunis/: TSA_assignment2.ipynb
Yunis/Assignment1/: assignment1.ipynb
Yunis/Assignment2/: TSA_assignment2.ipynb
Yunis/docs/: lecture5.R
report/: report.typ
report/output/: ols_forecast.csv
