[project]
name = "assignment1"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.4.2",
    "lmfit>=1.3.3",
    "matplotlib>=3.7.5",
    "numba>=0.61.2",
    "numpy>=1.24.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
    "uncertainties>=3.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pip>=25.0.1",
]
